<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:gravity="center_horizontal"
        android:minHeight="580dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical" >

        <EditText
            android:id="@+id/EditText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerTxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:hint="@string/placeholderGebruikersnaam" >

            <requestFocus />
        </EditText>

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditText1"
            android:layout_alignRight="@+id/EditText1"
            android:layout_below="@+id/EditText1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkboxMan"
                android:textColorLink="@color/white" />

            <RadioButton
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxVrouw" />

        </RadioGroup>

        <EditText
            android:id="@+id/EditText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditText2"
            android:layout_below="@+id/EditText2"
            android:layout_marginTop="11dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/EditText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditText3"
            android:layout_below="@+id/EditText3"
            android:layout_marginTop="11dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:hint="@string/land" />

        <EditText
            android:id="@+id/EditText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditText4"
            android:layout_alignRight="@+id/EditText4"
            android:layout_below="@+id/EditText4"
            android:layout_marginTop="9dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:hint="@string/placeholderWachtwoord"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/EditText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditText5"
            android:layout_alignRight="@+id/EditText5"
            android:layout_below="@+id/EditText5"
            android:layout_marginTop="11dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:hint="@string/placeholderWachtwoord"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/EditText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditText6"
            android:layout_below="@+id/EditText6"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:hint="@string/lengte" />

        <EditText
            android:id="@+id/EditText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditText7"
            android:layout_below="@+id/EditText7"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:hint="@string/gewicht" />

        <Button
            android:id="@+id/button1"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditText8"
            android:layout_below="@+id/EditText8"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/button"
            android:onClick="loadFiles"
            android:text="@string/registreer" />

        <TextView
            android:id="@+id/headerTxt"
            style="@style/headerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="@string/app_name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/EditText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/gender"
            android:layout_below="@+id/gender"
            android:layout_marginTop="9dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:hint="@string/geboortedatum" />

    </RelativeLayout>

</ScrollView>