<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="580dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="52dp"
            android:text="@string/welkom"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button1"
            style="@style/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/button2"
            android:minHeight="1dip"
            android:minWidth="1dip"
            android:onClick="toSelectRoute"
            android:text="@string/startLopen" />

        <Button
            android:id="@+id/button2"
            style="@style/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button3"
            android:layout_below="@+id/button1"
            android:layout_marginTop="18dp"
            android:background="@drawable/button2"
            android:minHeight="1dip"
            android:minWidth="1dip"
            android:onClick="toDetails"
            android:text="@string/details" />

        <Button
            android:id="@+id/button3"
            style="@style/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button1"
            android:layout_below="@+id/button2"
            android:layout_marginTop="20dp"
            android:background="@drawable/button2"
            android:minHeight="1dip"
            android:minWidth="1dip"
            android:onClick="toBerichten"
            android:text="@string/berichten" />

        <Button
            android:id="@+id/button4"
            style="@style/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button3"
            android:layout_below="@+id/button3"
            android:layout_marginTop="21dp"
            android:background="@drawable/button2"
            android:minHeight="1dip"
            android:minWidth="1dip"
            android:onClick="toInstellingen"
            android:text="@string/instellingen" />

        <TextView
            android:id="@+id/textView1"
            style="@style/headerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name" />
    </RelativeLayout>
</ScrollView>