<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:gravity="center_horizontal"
        android:minHeight="530dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical" >

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditText1"
            android:layout_alignRight="@+id/EditText1"
            android:layout_below="@+id/EditText1"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:hint="@string/placeholderWachtwoord"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button1"
            style="@style/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/EditText01"
            android:layout_below="@+id/EditText01"
            android:layout_marginTop="17dp"
            android:background="@drawable/button3"
            android:text="@string/login"
            android:onClick="toStart" />

        <Button
            android:id="@+id/Button01"
            style="@style/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_alignRight="@+id/EditText01"
            android:background="@drawable/button3"
            android:onClick="toRegister"
            android:text="@string/registreer" />

        <EditText
            android:id="@+id/EditText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerTxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="162dp"
            android:background="@drawable/rounded_edges"
            android:ems="10"
            android:hint="@string/placeholderGebruikersnaam" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/headerTxt"
            style="@style/headerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textAlignment="center" />
        
    </RelativeLayout>
</ScrollView>