<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:gravity="center_horizontal"
        android:minHeight="580dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/headerTxt"
            style="@style/headerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="@string/app_name"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerTxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:text="@string/vrienden"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button1"
            style="@style/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:background="@drawable/button2"
            android:minHeight="1dip"
            android:minWidth="1dip"
            android:onClick="vriendToevoegen"
            android:text="@string/vriendToevoegen" />

        <Button
            android:id="@+id/Button01"
            style="@style/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button1"
            android:layout_below="@+id/button1"
            android:layout_marginTop="14dp"
            android:background="@drawable/button2"
            android:minHeight="1dip"
            android:minWidth="1dip"
            android:onClick="overzichtVrienden"
            android:text="@string/overzichtVrienden" />

    </RelativeLayout>

</ScrollView>